# src/routes/events.js
@@ -1,7 +1,7 @@
 const router = require('express').Router();
-
+const { isAuth } = require('../middlewares/auth');
 const eventsControllers = require('../controllers/events');
 //  TODO: AUTH middleware will be added .
-router.delete('/:id', eventsControllers.deleteEvent);
+router.delete('/:id', isAuth, eventsControllers.deleteEvent);
 
 module.exports = router;
